--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint && npm run mocha",
-    "mocha": "node_modules/.bin/mocha --require test/support/setupTestFramework.js --compilers js:babel-register test/*-test.js"
+    "test": "yarn run lint-prettier && yarn run lint && yarn run jest",
+    "lint-prettier": "./format.sh --list-different; if [ $? != 0 ]; then echo \"CODE FORMATTING: please run npm run prettier and commit the changes\"; exit 1; fi",
+    "prettier": "./format.sh --write",
+    "jest": "jest"
   },
   "devDependencies": {
     "babel-eslint": "6.0.2",
     "babel-preset-es2015": "^6.16.0",
-    "babel-preset-es2016": "^6.16.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-native": "^1.9.0",
-    "babel-register": "^6.16.3",
-    "chai": "^3.5.0",
-    "enzyme": "^2.4.1",
     "eslint": "2.7.0",
     "eslint-plugin-react": "4.3.0",
-    "jsdom": "^9.6.0",
-    "mocha": "^3.1.0",
-    "react": "^0.14.5",
-    "react-addons-test-utils": "^0.14.5",
-    "react-dom": "^0.14.5",
-    "react-native": "^0.23.1",
-    "react-native-mock": "^0.2.6"
+    "jest": "^19.0.2",
+    "prettier": "^0.22.0",
+    "react": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-native": "^0.42.0",
+    "react-test-renderer": "~15.4.0"
+  },
+  "jest": {
+    "preset": "react-native"
   },
   "author": "James Friend <james@jsdf.co> (http://jsdf.co/)",
   "license": "ISC",
