--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "url": "git://github.com/jsdf/react-native-htmlview.git"
   },
   "dependencies": {
-    "css-to-react-native": "git+https://github.com/styled-components/css-to-react-native.git",
+    "css-to-react-native": "^2.0",
     "entities": "^1.1.1",
     "htmlparser2-without-node-native": "^3.9.0",
     "lodash": "^4.17.4"
