--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-native": "^0.42.0",
-    "react-test-renderer": "~15.4.0"
+    "react-test-renderer": "~15.4.0",
+    "prop-types": "^15.5.10"
   },
   "jest": {
     "preset": "react-native"
