--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react": "4.3.0",
     "jest": "^19.0.2",
     "prettier": "^1.3.1",
+    "prop-types": "^15.5.7",
     "react": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^15.4.2",
