--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "jest": "^19.0.2",
     "prettier": "^1.5.2",
     "prop-types": "^15.5.10",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-native": "^0.42.0",
-    "react-test-renderer": "~15.4.0"
+    "react": "16.0.0-alpha.12",
+    "react-dom": "16.0.0-alpha.12",
+    "react-native": "0.46.3",
+    "react-test-renderer": "16.0.0-alpha.12"
   },
   "jest": {
     "preset": "react-native"
