--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
   "name": "react-native-htmlview",
   "version": "0.13.0",
   "description": "A component which renders HTML content as native views",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "test": "yarn run format-lint && yarn run lint && yarn run jest",
-    "format-lint": "./format.sh --list-different; if [ $? != 0 ]; then echo \"CODE FORMATTING: please run 'yarn run format' and commit the changes\"; exit 1; fi",
-    "format": "./format.sh --write && eslint . --fix",
+    "format-lint":
+      "prettier --list-different \"./**/*.js\"; if [ $? != 0 ]; then echo \"CODE FORMATTING: please run 'yarn run format' and commit the changes\"; exit 1; fi",
+    "format": "prettier --write \"./**/*.js\" && eslint . --fix",
     "jest": "jest"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.5.0",
-    "eslint": "^4.1.1",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint": "^4.10.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.4.0",
     "jest": "^19.0.2",
-    "prettier": "^1.5.2",
+    "prettier": "^1.7.4",
     "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-dom": "16.0.0-alpha.12",
@@ -48,5 +50,10 @@
   "dependencies": {
     "entities": "^1.1.1",
     "htmlparser2-without-node-native": "^3.9.2"
+  },
+  "prettier": {
+    "bracketSpacing": false,
+    "trailingComma": "es5",
+    "singleQuote": true
   }
 }
