upgrae to preset-env

--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,14 @@
 {
-  "presets": ["react-native"]
+  "presets": [
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": "last 2 versions",
+          "node": "current"
+        }
+      }
+    ],
+    "react-native"
+  ]
 }
