--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-htmlview",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "description": "A component which renders HTML content as native views",
   "main": "index.js",
   "scripts": {
@@ -17,12 +17,13 @@
     "prettier": "^1.18.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
-    "react-test-renderer": "16.5.0"
+    "react-test-renderer": "16.5.0",
+    "deprecated-react-native-prop-types": "^4.0.0"
   },
   "jest": {
     "preset": "react-native"
   },
-  "author": "James Friend <james@jsdf.co> (http://jsdf.co/)",
+  "author": "Dayo Aworunse",
   "license": "ISC",
   "keywords": [
     "react",
